@@ -71,7 +71,7 @@ static int ser_open(CableHandle *h)
 {
     TRYC(ser_io_open(h->device, (int *)&(h->priv)));
     TRYC(ser_reset(h));
-#if OPEN_DELAYED
+#ifdef OPEN_DELAYED
 	usleep(2000);	// needs this because serial lines can be low at startup
 #endif
 
