@@ -53,7 +53,7 @@ extern "C" {
 
 #define ERROR_READ_TIMEOUT	4
 #define ERROR_WRITE_TIMEOUT	6
-//#define OPEN_DELAYED
+#define OPEN_DELAYED
 
 /**
  * CableModel:
